--- a/SimpleTcp/SimpleTcp.csproj
+++ b/SimpleTcp/SimpleTcp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.0;netcoreapp3.1;netstandard2.0;net461</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.1.0.7</Version>
+    <Version>2.1.0.8</Version>
     <Authors>Joel Christner</Authors>
     <Description>Simple wrapper for TCP client and server in C# with SSL support</Description>
     <Copyright>(c)2020 Joel Christner</Copyright>
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/jchristn/simpletcp</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
     <PackageTags>tcp messaging socket message sockets api rpc</PackageTags>
-    <PackageReleaseNotes>Breaking changes, consolidated settings and events classes, added TCP keepalives</PackageReleaseNotes>
+    <PackageReleaseNotes>Client disconnect API</PackageReleaseNotes>
     <PackageId>SuperSimpleTcp</PackageId>
     <Product>SuperSimpleTcp</Product>
     <PackageIconUrl>https://raw.githubusercontent.com/jchristn/SimpleTcp/master/assets/icon.ico</PackageIconUrl>
@@ -20,6 +20,14 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+    <DocumentationFile>SimpleTcp.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.0|AnyCPU'">
+    <DocumentationFile>SimpleTcp.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp3.0|AnyCPU'">
     <DocumentationFile>SimpleTcp.xml</DocumentationFile>
   </PropertyGroup>
 
