--- a/SuperSimpleTcp/SuperSimpleTcp.csproj
+++ b/SuperSimpleTcp/SuperSimpleTcp.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netstandard2.0;netstandard2.1;net48;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.0;netstandard2.1;net461;net48;net5.0;net6.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.5.0.5</Version>
+    <Version>2.6.0.1</Version>
     <Authors>Joel Christner</Authors>
     <Description>Simple wrapper for TCP client and server in C# with SSL support</Description>
-    <Copyright>(c)2020 Joel Christner</Copyright>
+    <Copyright>(c)2021 Joel Christner</Copyright>
     <PackageLicenseUrl></PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/jchristn/simpletcp</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/jchristn/simpletcp</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/jchristn/supersimpletcp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jchristn/supersimpletcp</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
     <PackageTags>tcp messaging socket message sockets api rpc</PackageTags>
-    <PackageReleaseNotes>Refactor and internal improvements from @tinohager.</PackageReleaseNotes>
+    <PackageReleaseNotes>Breaking changes; refactor and namespace change from @tinohager.</PackageReleaseNotes>
     <PackageId>SuperSimpleTcp</PackageId>
     <Product>SuperSimpleTcp</Product>
     <PackageIconUrl></PackageIconUrl>
