fix path for certificate

--- a/src/SuperSimpleTcp.UnitTest/SuperSimpleTcp.UnitTest.csproj
+++ b/src/SuperSimpleTcp.UnitTest/SuperSimpleTcp.UnitTest.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\simpletcp.crt" Link="simpletcp.crt">
+    <None Include="..\..\simpletcp.crt" Link="simpletcp.crt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
