--- a/src/SuperSimpleTcp.UnitTest/SuperSimpleTcp.UnitTest.csproj
+++ b/src/SuperSimpleTcp.UnitTest/SuperSimpleTcp.UnitTest.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <None Include="..\..\simpletcp.crt" Link="simpletcp.crt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
