--- a/src/SuperSimpleTcp/SuperSimpleTcp.csproj
+++ b/src/SuperSimpleTcp/SuperSimpleTcp.csproj
@@ -3,16 +3,16 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netstandard2.0;netstandard2.1;net461;net48;net5.0;net6.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.6.0.8</Version>
+    <Version>2.6.1</Version>
     <Authors>Joel Christner</Authors>
     <Description>Simple wrapper for TCP client and server in C# with SSL support</Description>
-    <Copyright>(c)2021 Joel Christner</Copyright>
+    <Copyright>(c)2022 Joel Christner</Copyright>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/jchristn/supersimpletcp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jchristn/supersimpletcp</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
     <PackageTags>tcp messaging socket message sockets api rpc</PackageTags>
-    <PackageReleaseNotes>Bugfixes</PackageReleaseNotes>
+    <PackageReleaseNotes>Max connection setting, thank you @mvelayati</PackageReleaseNotes>
     <PackageId>SuperSimpleTcp</PackageId>
     <Product>SuperSimpleTcp</Product>
     <PackageIconUrl></PackageIconUrl>
